# StoneSkills

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: builder.rs  errors.rs  events.rs  mod.rs  state.rs
src-tauri/src/commands/: app.rs  logs.rs  mod.rs  system.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: domain.rs  dto.rs  mod.rs  result.rs
src-tauri/src/platform/: common.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/repositories/: installations_repository.rs  mod.rs  settings_repository.rs  skills_repository.rs  targets_repository.rs
src-tauri/src/services/: fs_service.rs  log_service.rs  mod.rs  path_service.rs  registry_service.rs  repository_service.rs  settings_service.rs  skill_install_service.rs  system_service.rs
src/app/layout/: BottomStatusBar.tsx  BrandIsland.tsx  HeaderIsland.tsx  MainIsland.tsx  PageHeaderContext.tsx  ShellLayout.test.tsx  ShellLayout.tsx  Sidebar.test.tsx  Sidebar.tsx  Topbar.tsx
src/app/providers/: AppProviders.test.tsx  AppProviders.tsx  AppToaster.tsx
src/app/router/: AppRouter.test.tsx  AppRouter.tsx
src/components/shared/: AppErrorBoundary.tsx  ConfirmDialog.tsx  (+4 more)
src/hooks/: useAppBootstrap.ts  useResolvedTheme.ts  useTaskEventBridge.ts
src/stores/: app-store.test.ts  app-store.ts
(+57 files in other folders)
