[package]
name = "stoneskills"
version = "0.1.0"
description = "StoneSkills desktop shell"
authors = ["sty"]
edition = "2021"

[lib]
name = "stoneskills_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
